docs: Expand README with detailed documentation and rationale, and update pubspec description.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: trinity
-description: "A new Flutter package project."
+description: "A reactive state management library for Flutter."
 version: 0.0.1
 homepage:
 
